--- a/web/locales/vi.json
+++ b/web/locales/vi.json
@@ -135,7 +135,7 @@
     "company name": "Tên công ty",
     "summary": "Tóm tắt",
     "position": "Vị trí",
-    "manage profile": "Quẩn lý hồ sơ",
+    "manage profile": "Quản lý hồ sơ",
     "manage CV": "Quản lý CV",
     "applied history": "Lịch sử ứng tuyển",
     "your_application_history": "Lịch sử ứng tuyển của bạn",
