update vn.js, add message create candidate

--- a/web/locales/vi.json
+++ b/web/locales/vi.json
@@ -163,7 +163,7 @@
     "excellent": "Xuất sắc",
     "comment": "Nhận xét",
     "all assessments": "Tất cả đánh giá",
-    "filtering options": "Filtering options",
+    "filtering options": "Bộ lọc",
     "new events": "Được thêm mới",
     "updated events": "Được cập nhật",
     "finished events": "Đã kết thúc",
